[project]
name = "winnougan-nodes"
description = "Winnougan and WINT8 custom nodes for ComfyUI — prompt encoder, CLIP loader, power LoRA loader, INT8 diffuser loader, resolution pickers, and more."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Winnougan/WINT8-ComfyUI.git"

[tool.comfy]
PublisherId = "winnougan"
DisplayName = "Winnougan Nodes"
Icon = ""
